--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
 						</ons-toolbar-button>
 						<!-- トイレ追加ボタン -->
 						<ons-toolbar-button>
-							<ons-icon icon="fa-plus"></ons-icon>
+							<ons-icon icon="fa-plus" id="method"></ons-icon>
 						</ons-toolbar-button>
 					</div>
 				</ons-toolbar>
